# nanojax

./: .gitignore  LICENSE  README.md  nanojax.py  pyproject.toml  requirements.txt
.github/workflows/: auto-trigger.yaml  code-review.yaml  lint.yaml
examples/: gaussian_derivatives.py  nn.py
nanojax/: __init__.py  grad_register.py  nanojax.py
tests/: test_grad.py  test_nanojax.py  test_tracing.py
