[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanojax"
version = "0.1.0"
description = "A minimal tape-based autodiff library in pure Python/NumPy"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Aaquib Syed"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "matplotlib>=3.5.0",
    "tqdm>=4.60.0",
]

[project.urls]
Homepage = "https://github.com/Aaquib111/nanojax"
Repository = "https://github.com/Aaquib111/nanojax"
Issues = "https://github.com/Aaquib111/nanojax/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["nanojax*"]
exclude = ["tests*", "examples*"]
